--- a/templates/mbsync.service.j2
+++ b/templates/mbsync.service.j2
@@ -5,3 +5,6 @@ Description=Mailbox synchronization service
 [Service]
 Type=oneshot
 ExecStart=/usr/bin/mbsync {{ mbsync_systemd_service_cmd_args | default([]) | join(' ') }}
+
+[Install]
+WantedBy=multi-user.target
